BEN1: measure y7hc's bounded-INSERT change with a same-host A/B (computenet-x9e.14)
The measurement half of computenet-y7hc. Its code half landed as 314670f1a; this
is the separate claim that it worked, and it is answered by measurement.

The bead's stated baseline could not settle it: the 2026-08-18 REAL entry it
quotes is superseded for environment purposes by computenet-am2h (its sweep ran
on Homebrew JDK 26.0.1 under a Harness line claiming Adoptium 21.0.11), the two
candidate baselines disagree about how large the gap was, and both were measured
on a different machine from the only pinned host available. Dispersion is the
quantity most sensitive to host and JVM, so a cross-host comparison cannot
support "the fix worked".

Instead: a same-host A/B, authorized by the dispatching orchestrator. The
identical sweep at the post-fix harness (ae16cf257) and at the pre-fix benchmark
source (9aabe4923, y7hc's parent), same machine, same Microsoft JDK 21.0.11,
20 minutes apart, each launched on a polled load trough.

INSERT relative dispersion 0.03130-0.12543 (median 0.08250) -> 0.00646-0.02499
(median 0.01082), 18 of 18 subjects tightening and none widening. RETRACT, the
untreated control, 0.03082-0.09637 -> 0.01102-0.22146, 10 of 18 tightening and
8 widening: no net shift. The [BEN1-28] asymmetry does not merely close, it
inverts. Zero of 36 rows clear NOISE_FLOOR 0.005 in either arm, so the
Reportable count did not move and could not have.

The entry records both arms' full host readings, names the seven per-iteration
excursions found by reading the JMH logs (all in the control direction; trimming
them leaves the finding intact), states that neither arm stayed under the
quiesced threshold throughout, and attributes the resident-security-stack
interpretation to the orchestrator rather than to the measuring session.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>